apps/podinfo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      protocol: TCP
      targetPort: http
    - name: http-metrics
      port: 9797
      protocol: TCP
      targetPort: http-metrics
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
